# ds_codes

./: .gitignore  FeedForwardNN.py  KL_Divergence.ipynb  README.md  autoencoder.py  autoencoder_anomaly.py  backpropagation_sample.py  basic_xgboost_cl_reg_pipeline_with_evaluation.py  binary_tree_height.py  check.ipynb  classification_evaluation_metrics_scratch.ipynb  gmm.py  gradient_descent.ipynb  k_nearest_neighbors.py  knn.py  linear_regression.py  logistic_regression.py  lstm_demand_forecasting_sample.ipynb  lstm_demand_forecasting_sample.py  main.py  mcmc_for_estimating_pi.ipynb  metropolis_hastings_exp1.ipynb  micrograd_from_scratch_karpathy.ipynb  pseudo_random_number_generator_lcg.ipynb  pyproject.toml  random_forest.py  regularizations.py  ruff.toml  svm_with_smo_optimization.py  transformer_with_numpy_only.py  transformers_v1.py  transformers_with_torch_v1.py  unsqueeze_check.py  xgboost.py  xgboost_custom_np.py
.github/workflows/: ruff.yml
GANs/: mnist_gan_implementation.py  mnist_wgan_implementation.py
GANs/runs/GAN_MNIST/fake/: events.out.tfevents.1746038758.codespaces-8c68ad.61779.0  events.out.tfevents.1746039033.codespaces-8c68ad.62995.0  events.out.tfevents.1746039629.codespaces-8c68ad.65851.0
ancova/: ancova_implementation.ipynb  user_data.csv
playground/: README.md  app.py  run.sh
playground/descriptions/: k_nearest_neighbors.md  linear_regression.md  logistic_regression.md
playground/utils/: __init__.py  code_loader.py
sql_practice/: covariance_calculation.ipynb  create_table.ipynb  messages.db
(+3 files in other folders)
